--- a/.eslintrc
+++ b/.eslintrc
@@ -1,57 +1,42 @@
 {
   "env": {
-      "es2021": true,
-      "node": true
+    "es2021": true,
+    "node": true
   },
-  "extends": [
-      "airbnb-base"
-  ],
+  "extends": ["airbnb-base"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
-  "plugins": [
-      "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "settings": {
-      "import/resolver": {
-          "node": {
-              "extensions": [
-                  ".ts",
-                  ".js",
-                  ".json"
-              ]
-          }
-      },
-      "import/extensions": [
-          ".js",
-          ".ts"
-      ]
+    "import/resolver": {
+      "node": {
+        "extensions": [".ts", ".js", ".json"]
+      }
+    },
+    "import/extensions": [".js", ".ts"]
   },
   "rules": {
-      "import/extensions": [
-          "error",
-          "ignorePackages",
-          {
-              "js": "never",
-              "ts": "never"
-          }
-      ]
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "ts": "never"
+      }
+    ]
   },
   "overrides": [
     {
-      "files": [
-        "*.js",
-        "*.ts"
-      ],
+      "files": ["*.js", "*.ts"],
       "rules": {
+        "object-curly-newline": "off",
         "no-underscore-dangle": [
           "error",
           {
-            "allow": [
-              "_id"
-            ]
+            "allow": ["_id"]
           }
         ]
       }
