--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "@types/validator": "^13.11.9",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
